# TwinSearcher

./: .clang-format  CMakeLists.txt  config.conf
inc/: allocator.h  benchmark.h  config.h  globals.h  output.h  searcher.h  searcher_configuration.h  splitfile.h  stopwatch.h
inc/btree/: fc_btree.h
inc/searcher/: algorithm.h  allocator.h  generator.h  global_variables.h  searcher_configuration.h  tree_type.h
inc/tlx/container/: btree.hpp
src/: benchmark.cpp  config.cpp  main.cpp  output.cpp  splitfile.cpp  stopwatch.cpp
src/searcher/: generator.cpp  global_k_generator.cpp  range_generator.cpp
